ATLAS-1015: Sender details

--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -200,7 +200,7 @@
   <span class="font-bold-2xl">{{ 'FORM.SUPPLEMENTARY_INFORMATION' | translate }}</span>
   <div class="col-12 d-flex mt-3">
     <div class="d-flex flex-column col-6">
-      <form-comment [displayInfoIcon]="false" [formGroup]="form"></form-comment>
+      <form-comment [formGroup]="form"></form-comment>
     </div>
   </div>
 </ng-container>
