--- a/frontend/src/app/core/form-components/comment/comment.component.html
+++ b/frontend/src/app/core/form-components/comment/comment.component.html
@@ -3,10 +3,11 @@
     [fieldExamples]="[
       { label: 'FORM.TEXT', translate: true },
       { label: ' |', translate: false },
-      { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '1500' } }
+      { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: maxChars } }
     ]"
     [required]="required"
     fieldLabel="{{ label }}"
+    infoIconTitle="{{ info }}"
   ></app-atlas-label-field>
   <textarea
     [attr.data-cy]="controlName"
