--- a/frontend/src/app/core/form-components/search-select/search-select.component.html
+++ b/frontend/src/app/core/form-components/search-select/search-select.component.html
@@ -2,6 +2,7 @@
   <ng-content></ng-content>
   <ng-select
     #ngSelect
+    [multiple]="multiple"
     (change)="changeTrigger.emit($event)"
     [bindValue]="bindValueInp"
     [formControlName]="controlName"
