--- a/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
@@ -6,56 +6,58 @@
       src="assets/images/cantons/{{ cantonShort.toUpperCase() }}.svg"
     />
   </div>
-  <div *ngIf="isHearingPlanActual()" class="ps-4">
+  <div *ngIf="isHearingStatusActual" class="ps-4">
     <div class="table-heading font-bold-4xl color-gray-900 mb-3">
       {{ 'PAGES.TTH.TITLE_MENU' | translate }} {{ foundTimetableHearingYear.timetableYear }}
     </div>
     <div *ngIf="!noActiveTimetableHearingYearFound">
       <div class="mb-5">
-      <span>{{
-        'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_PREFIX'
-          | translate : {timeTableYear: foundTimetableHearingYear.timetableYear}
+        <span>{{
+          'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_PREFIX'
+            | translate : { timeTableYear: foundTimetableHearingYear.timetableYear }
         }}</span>
         <span class="font-bold-base">{{
           'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
             | translate
-            : {
-              hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
-              hearingTo: foundTimetableHearingYear.hearingTo | displayDate
-            }
-          }}</span>
+              : {
+                  hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
+                  hearingTo: foundTimetableHearingYear.hearingTo | displayDate
+                }
+        }}</span>
       </div>
     </div>
     <div *ngIf="noActiveTimetableHearingYearFound">
       <div class="mb-5">
-      <span>{{
-        'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_NOT_FOUND_SUBHEADING_PREFIX'
-          | translate : {timeTableYear: foundTimetableHearingYear.timetableYear}
+        <span>{{
+          'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_NOT_FOUND_SUBHEADING_PREFIX'
+            | translate : { timeTableYear: foundTimetableHearingYear.timetableYear }
         }}</span>
         <span class="font-bold-base">{{
           'TTH.OVERVIEW_TAB.OVERVIEW_ACTUAL_SUBHEADING_POSTFIX'
             | translate
-            : {
-              hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
-              hearingTo: foundTimetableHearingYear.hearingTo | displayDate
-            }
-          }}</span>
+              : {
+                  hearingFrom: foundTimetableHearingYear.hearingFrom | displayDate,
+                  hearingTo: foundTimetableHearingYear.hearingTo | displayDate
+                }
+        }}</span>
       </div>
     </div>
   </div>
-  <div *ngIf="isHearingPlanPlanned()" class="ps-4">
+  <div *ngIf="isHearingStatusPlanned" class="ps-4">
     <div class="table-heading font-bold-4xl color-gray-900 mb-3">
       {{ 'TTH.TAB.PLANNED' | translate }}
     </div>
     <div class="mb-5">
       <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_PLANNED_SUBHEADING' | translate }}</span>
     </div>
-    <div *ngIf="noActiveTimetableHearingYearFound" class="table-heading font-bold-xl color-gray-900 mb-3">
+    <div
+      *ngIf="noActiveTimetableHearingYearFound"
+      class="table-heading font-bold-xl color-gray-900 mb-3"
+    >
       <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_PLANNED_NOT_FOUND' | translate }}</span>
     </div>
-
   </div>
-  <div *ngIf="isHearingPlanArchived()" class="ps-4">
+  <div *ngIf="isHearingStatusArchived" class="ps-4">
     <div class="table-heading font-bold-4xl color-gray-900 mb-3">
       {{ 'TTH.TAB.ARCHIVED' | translate }}
     </div>
@@ -63,7 +65,10 @@
       <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_ARCHIVED_SUBHEADING' | translate }}</span>
     </div>
 
-    <div *ngIf="noActiveTimetableHearingYearFound" class="table-heading font-bold-xl color-gray-900 mb-3">
+    <div
+      *ngIf="noActiveTimetableHearingYearFound"
+      class="table-heading font-bold-xl color-gray-900 mb-3"
+    >
       <span>{{ 'TTH.OVERVIEW_TAB.OVERVIEW_ARCHIVED_NOT_FOUND' | translate }}</span>
     </div>
   </div>
