--- a/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab.component.html
@@ -1,7 +1,7 @@
 <div class="ps-5 pt-5">
   <nav [tabPanel]="tabPanelCanton" class="tabs" data-cy="tabs" mat-tab-nav-bar>
     <a
-      (click)="activateTab(tab)"
+      (click)="clickOnTab(tab)"
       *ngFor="let tab of TABS"
       [active]="activeTab === tab"
       [routerLink]="tab.link"
