--- a/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
+++ b/frontend/src/app/pages/tth/timetable-hearing-overview-tab/timetable-hearing-overview-tab-heading/timetable-hearing-overview-tab-heading.component.html
@@ -6,7 +6,7 @@
       src="assets/images/cantons/{{ cantonShort.toUpperCase() }}.svg"
     />
   </div>
-  <div *ngIf="isHearingStatusActual" class="ps-4">
+  <div *ngIf="isHearingStatusActive" class="ps-4">
     <div class="table-heading font-bold-4xl color-gray-900 mb-3">
       {{ 'PAGES.TTH.TITLE_MENU' | translate }} {{ foundTimetableHearingYear.timetableYear }}
     </div>
