ATLAS-1152: make selected item font normal

--- a/frontend/src/app/core/components/table-search/table-search.component.html
+++ b/frontend/src/app/core/components/table-search/table-search.component.html
@@ -42,7 +42,7 @@
         <mat-select
           (selectionChange)="statusSelectionChange()"
           [(value)]="activeStatuses"
-          class="font-bold-base"
+          class="color-primary-400"
           data-cy="table-search-status-input"
           multiple
         >
