--- a/frontend/src/app/pages/bodi/transport-companies/transport-companies.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/transport-companies.component.html
@@ -25,7 +25,7 @@
       <mat-select
         (selectionChange)="onStatusSelectionChange()"
         [(value)]="activeStatusTypes"
-        class="font-bold-base"
+        class="color-primary-400"
         data-cy="table-search-status"
         multiple
       >
