--- a/frontend/src/app/pages/lidi/lines/lines.component.html
+++ b/frontend/src/app/pages/lidi/lines/lines.component.html
@@ -22,7 +22,7 @@
       <mat-select
         (selectionChange)="onLineTypeSelectionChange()"
         [(value)]="activeLineTypes"
-        class="font-bold-base"
+        class="color-primary-400"
         data-cy="table-search-line-type"
         multiple
       >
