--- a/frontend/src/app/pages/lidi/sublines/sublines.component.html
+++ b/frontend/src/app/pages/lidi/sublines/sublines.component.html
@@ -22,7 +22,7 @@
       <mat-select
         (selectionChange)="onSublineTypeSelectionChange()"
         [(value)]="activeSublineTypes"
-        class="font-bold-base"
+        class="color-primary-400"
         data-cy="table-search-subline-type"
         multiple
       >
