--- a/frontend/src/app/pages/user-administration/components/application-config/user-administration-application-config.component.html
+++ b/frontend/src/app/pages/user-administration/components/application-config/user-administration-application-config.component.html
@@ -56,7 +56,7 @@
             (selectionChange)="cantonSelectionChanged($event)"
             [(value)]="cantonSelection"
             [disabled]="readOnly"
-            class="font-bold-base"
+            class="color-primary-400"
             multiple
           >
             <mat-option *ngFor="let canton of SWISS_CANTONS" [value]="canton"
