ATLAS-772: changes after rebasing with master

--- a/frontend/src/app/core/components/table-filter/table-filter.component.html
+++ b/frontend/src/app/core/components/table-filter/table-filter.component.html
@@ -57,7 +57,7 @@
           <mat-select
             (selectionChange)="multiSelectChanged($event, rowIndex, filterConfigIndex)"
             [value]="multiSelect.activeSearch"
-            class="font-bold-base"
+            class="color-primary-400"
             attr.data-cy="table-filter-multi-select-{{ rowIndex }}-{{ filterConfigIndex }}"
             multiple
           >
