--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="d-flex flex-column col-6">
-            <mat-label class="font-bold-lg subtitle-margin"
+            <mat-label class="font-bold-lg subtitle-margin required-indicator"
               >{{ 'TTH.SELECT_CANTON' | translate }}
             </mat-label>
             <span class="fake-lable-space"></span>
@@ -53,6 +53,7 @@
                 </mat-option>
               </mat-select>
             </div>
+            <app-atlas-field-error [form]="form" controlName="swissCanton"></app-atlas-field-error>
           </div>
         </div>
 
