--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -194,11 +194,11 @@
           </div>
         </div>
 
-        <div class="font-regular-sm mb-2">{{ 'TTH.STATEMENT.ATTATCHMENT_INFO' | translate }}</div>
+        <div class="font-regular-sm mb-2">{{ 'TTH.STATEMENT.ATTACHMENT_INFO' | translate }}</div>
         <atlas-button
           applicationType="LIDI"
           buttonDataCy="addPDF"
-          buttonText="TTH.STATEMENT.ATTATCHMENT_BUTTON"
+          buttonText="TTH.STATEMENT.ATTACHMENT_BUTTON"
           buttonType="createCheckingPermission"
           wrapperStyleClass="mb-4"
         >
