ATLAS-1015: extract page-container

--- a/frontend/src/app/core/components/detail-footer/detail-footer.component.scss
+++ b/frontend/src/app/core/components/detail-footer/detail-footer.component.scss
@@ -2,7 +2,7 @@
 
 .page-footer {
   height: calc(#{variables.$footerHeight} + 56px);
-  width: calc(100vw - 350px);
+  width: variables.$detailPageWidth;
   background-color: variables.$background;
 
   position: fixed;
