--- a/frontend/src/app/core/form-components/date-range/date-range.component.html
+++ b/frontend/src/app/core/form-components/date-range/date-range.component.html
@@ -6,7 +6,7 @@
         { label: EXAMPLE_DATE_FROM, translate: false }
       ]"
       [required]="true"
-      fieldLabel="COMMON.VALID_FROM"
+      [fieldLabel]="fieldLabelFrom"
     ></app-atlas-label-field>
     <div class="text-field-flex">
       <input
@@ -33,7 +33,7 @@
         { label: EXAMPLE_DATE_TO, translate: false }
       ]"
       [required]="true"
-      fieldLabel="COMMON.VALID_TO"
+      [fieldLabel]="fieldLabelTo"
     ></app-atlas-label-field>
     <div class="text-field-flex">
       <input
