--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.html
@@ -108,7 +108,11 @@
           valueExtraction=""
         >
         </bo-select>
-        <form-date-range [formGroup]="form" class="col-6"></form-date-range>
+        <form-date-range
+          [fieldLabelFrom]="'COMMON.VALID_FROM'"
+          [fieldLabelTo]="'COMMON.VALID_TO'"
+          [formGroup]="form"
+        ></form-date-range>
       </form>
     </app-relation>
   </div>
