--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -96,7 +96,11 @@
   <span class="font-bold-2xl">{{ 'FORM.KEY_DATA' | translate }}</span>
 
   <div class="w-50">
-    <form-date-range [formGroup]="form"></form-date-range>
+    <form-date-range
+      [fieldLabelFrom]="'COMMON.VALID_FROM'"
+      [fieldLabelTo]="'COMMON.VALID_TO'"
+      [formGroup]="form"
+    ></form-date-range>
   </div>
 
   <div class="col-12 d-flex mt-3 pb-3">
