--- a/frontend/src/app/core/form-components/date-range/date-range.component.html
+++ b/frontend/src/app/core/form-components/date-range/date-range.component.html
@@ -5,8 +5,9 @@
         { label: 'FORM.FOR_EXAMPLE', translate: true },
         { label: EXAMPLE_DATE_FROM, translate: false }
       ]"
-      [required]="true"
+      [required]="required"
       [fieldLabel]="fieldLabelFrom"
+      [infoIconTitle]="infoIconTitleFrom"
     ></app-atlas-label-field>
     <div class="text-field-flex">
       <input
@@ -32,8 +33,9 @@
         { label: 'FORM.FOR_EXAMPLE', translate: true },
         { label: EXAMPLE_DATE_TO, translate: false }
       ]"
-      [required]="true"
+      [required]="required"
       [fieldLabel]="fieldLabelTo"
+      [infoIconTitle]="infoIconTitleTo"
     ></app-atlas-label-field>
     <div class="text-field-flex">
       <input
