--- a/frontend/src/app/core/components/tthdialog/tthdialog.component.html
+++ b/frontend/src/app/core/components/tthdialog/tthdialog.component.html
@@ -45,7 +45,6 @@
 
     <mat-dialog-actions class="justify-content-end">
       <button
-        (click)="openStandardDialog()"
         [mat-dialog-close]="false"
         class="atlas-primary-btn me-3"
         data-cy="dialog-cancel-button"
@@ -53,7 +52,7 @@
         {{ data.cancelText ?? 'DIALOG.CANCEL' | translate }}
       </button>
       <button
-        (click)="createTth()"
+        (click)="createNewTimetableHearingYear()"
         [mat-dialog-close]="true"
         class="atlas-primary-btn primary-color-btn"
         data-cy="dialog-confirm-button"
