ATLAS-772: fixed tth init bug, added getOverview tests, wip: tth table-settings

--- a/frontend/src/app/pages/bodi/business-organisations/business-organisation.component.html
+++ b/frontend/src/app/pages/bodi/business-organisations/business-organisation.component.html
@@ -7,9 +7,10 @@
   [totalCount]="totalCount$"
   [tableColumns]="tableColumns"
   [canEdit]="true"
-  (editElementEvent)="editVersion($event)"
-  (getTableElementsEvent)="getOverview($event)"
   [tableFilterConfig]="tableFilterConfig"
+  (editElementEvent)="editVersion($event)"
+  (tableChanged)="getOverview($event)"
+  (tableInitialized)="getOverview($event)"
   data-cy="bodi-business-organisation"
 >
 </app-table>
