--- a/frontend/src/app/pages/lidi/workflow/overview/lidi-workflow-overview.component.html
+++ b/frontend/src/app/pages/lidi/workflow/overview/lidi-workflow-overview.component.html
@@ -4,7 +4,8 @@
 
 <app-table
   (editElementEvent)="navigateToDetails($event)"
-  (getTableElementsEvent)="getOverview($event)"
+  (tableChanged)="getOverview($event)"
+  (tableInitialized)="getOverview($event)"
   [canEdit]="true"
   [tableColumns]="lineSnapshotsTableColumns"
   [tableData]="lineVersionSnapshots"
