--- a/frontend/src/app/pages/user-administration/user/overview/user-administration-overview.component.html
+++ b/frontend/src/app/pages/user-administration/user/overview/user-administration-overview.component.html
@@ -1,6 +1,7 @@
 <app-table
   (editElementEvent)="openUser($event)"
-  (getTableElementsEvent)="reloadTableWithCurrentSettings()"
+  (tableChanged)="reloadTableWithCurrentSettings()"
+  (tableInitialized)="reloadTableWithCurrentSettings()"
   [showTableFilter]="false"
   [pageSizeOptions]="[5, 10, 20]"
   [sortingDisabled]="true"
