--- a/frontend/src/app/pages/lidi/lines/lines.component.html
+++ b/frontend/src/app/pages/lidi/lines/lines.component.html
@@ -4,7 +4,8 @@
 
 <app-table
   (editElementEvent)="editVersion($event)"
-  (getTableElementsEvent)="getOverview($event)"
+  (tableChanged)="getOverview($event)"
+  (tableInitialized)="getOverview($event)"
   [canEdit]="true"
   [tableColumns]="linesTableColumns"
   [tableData]="lineVersions"
