--- a/frontend/src/app/pages/ttfn/overview/timetable-field-number-overview.component.html
+++ b/frontend/src/app/pages/ttfn/overview/timetable-field-number-overview.component.html
@@ -18,9 +18,10 @@
       [totalCount]="totalCount$"
       [tableColumns]="tableColumns"
       [canEdit]="true"
-      (editElementEvent)="editVersion($event)"
-      (getTableElementsEvent)="getOverview($event)"
       [tableFilterConfig]="tableFilterConfig"
+      (editElementEvent)="editVersion($event)"
+      (tableChanged)="getOverview($event)"
+      (tableInitialized)="getOverview($event)"
     ></app-table>
     <router-outlet></router-outlet>
   </div>
